--- a/.github/workflows/ci-pipeline.yaml
+++ b/.github/workflows/ci-pipeline.yaml
@@ -1,4 +1,4 @@
-name: CI Pipeline - Build and Push Docker Image
+name: CI/CD Pipeline - Build and Push Docker Image
 
 on:
   push:
@@ -9,17 +9,25 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout del código
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4 # Versión actualizada
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3 # Recomendado para buildx
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3 # Usamos el constructor moderno
 
       - name: Login a Docker Hub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3 # Versión actualizada
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Construir y subir la imagen de Docker
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v5 # Versión actualizada
         with:
           context: .
           push: true
           tags: angelnava14/stockmaster-api:latest
+          cache-from: type=gha # Añadimos caché para acelerar builds futuros
+          cache-to: type=gha,mode=max
